--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Newgin Sam portfolio created with love"
     />
+  <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio, React, react-icons, sass, hire, freelancer,">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Newgin Sam">
+  <meta property="og:title" content="Newgin Sam" />
+  <meta property="og:description" content="Newgin Sam portfolio created with love" />
+  <meta name="author" content="Newgin Sam">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
@@ -30,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Newgin Sam</title>
   </head>
   <body>
    
